<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4252B9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="181dp"
                    android:layout_height="224dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/profile" />

                <EditText
                    android:id="@+id/escribirnombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColorHint="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="181dp"
                    android:layout_height="223dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/profile" />

                <EditText
                    android:id="@+id/escribirapellido"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColorHint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="181dp"
                    android:layout_height="176dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/correo" />

                <EditText
                    android:id="@+id/escribircurso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColorHint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/phone" />

                <EditText
                    android:id="@+id/escribirtelefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColorHint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Vertodas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btredondo"
                    android:onClick="guardardatos"
                    android:text="@string/guardar_en_lista" />

                <LinearLayout
                    android:layout_width="243dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <Button
                    android:id="@+id/cambiarmostrar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btredondo"
                    android:onClick="cambiarpantalla"
                    android:text="@string/ver_contacto" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>